--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # =============== #
 # Unity generated #
 # =============== #
-Temp/
-Library/
+/[Tt]emp/
+/[Ll]ibrary/
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
